<resources>
    <string name="app_name">桃之夭夭</string>
    <string name="flower_title">鲜花搭配</string>
    <string name="main_flower_shape_basket">花篮</string>
    <string name="main_flower_shape">形状</string>
    <string name="main_flower_shape_bouquet">花束</string>
    <string name="main_flower_shape_car">花车</string>
    <string name="main_bottom_home_page">首页</string>
    <string name="main_bottom_community">社区</string>
    <string name="main_bottom_my">我的</string>
    <string name="main_flower_usage_marriage">婚庆</string>
    <string name="main_flower_usage_birthday">生日</string>
    <string name="main_flower_usage_gift">贺礼</string>
    <string name="main_flower_target_parent">父母</string>
    <string name="main_flower_target_classmate">同学</string>
    <string name="main_flower_target_friend">朋友</string>
    <string name="main_flower_target_teacher">老师</string>
    <string name="main_flower_usage">用途</string>
    <string name="main_flower_target">对象</string>
    <string name="main_botton_flower_generate">生成搭配</string>
    <string name="text_mine_myorder">我的订单</string>
    <string name="text_mine_personalpage">个人主页 ></string>
    <string name="text_mine_creation">创作</string>
    <string name="text_mine_follow">关注</string>
    <string name="text_mine_collect">收藏</string>
    <string name="text_mine_viewallorder">查看全部订单 ></string>
    <string name="text_mine_beforepayment">待付款</string>
    <string name="text_mine_beforeshipment">待发货</string>
    <string name="text_mine_beforereceiving">待收货</string>
    <string name="text_mine_comment">评价</string>
    <string name="text_mine_aftersale">退款/售后</string>
    <string name="login_title">登录</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_button_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_forgetpassword">找回密码</string>
    <string name="register_title">注册</string>
    <string name="register_button_register">注册</string>
    <string name="login_dialog_title">登录中</string>
    <string name="login_dialog_cancel">取消</string>
    <string name="register_password_hint">请输入密码</string>
    <string name="flower_result_title">搭配结果</string>
    <string name="generate_dialog_title">生成搭配中</string>
    <string name="generate_dialog_cancel">取消</string>
    <string name="main_community_tab_follow">关注</string>
    <string name="main_community_tab_square">广场</string>
    <string name="login_dialog_failed">登录失败</string>
    <string name="register_dialog_title">正在注册</string>
    <string name="register_dialog_cancel">取消</string>
    <string name="register_dialog_success">注册成功</string>
    <string name="register_dialog_confirm">确认</string>
    <string name="register_dialog_failed">注册失败</string>
    <string name="publish_title">发表</string>
    <string name="publish_publishbutton">发表</string>
    <string name="settings_title">设置</string>
    <string name="settings_logout">退出当前账号</string>
    <string name="settings_reset_password">修改密码</string>
    <string name="publish_dialog_title">发表中</string>
    <string name="publish_dialog_cancel">取消</string>
    <string name="publish_dialog_failed">发表失败</string>
    <string name="publish_dialog_success">发表成功</string>
    <string name="publish_dialog_confirm">确认</string>
    <string name="main_bottom_course">课程</string>
    <string name="main_flower_usage_funeral">葬礼</string>
    <string name="main_homepage_title">首页</string>
    <string name="main_community_title">社区</string>
    <string name="main_mine_title">我的</string>
    <string name="register_nickname_hint">请输入昵称</string>
    <string name="register_phonenumber_hint">请输入手机号</string>
    <string name="modify_phone_number_title">手机号</string>
    <string name="modify_nickname_title">昵称</string>
    <string name="modify_personal_description_title">个人描述</string>
    <string name="modify_sex_title">性别</string>
    <string name="modify_age_title">年龄</string>
    <string name="modify_region_title">地区</string>
    <string name="modify_title">编辑个人资料</string>
    <string name="modify_sex_male">男</string>
    <string name="modify_sex_female">女</string>
    <string name="modify_sex_secret">保密</string>
    <string name="flower_button_filter">筛选已有</string>
    <string name="personal_page_button_modify">编辑资料</string>
    <string name="change_password_title">修改密码</string>
    <string name="change_password_button_confirm">修改</string>
    <string name="change_password_old_pw">原密码</string>
    <string name="change_password_new_pw">新密码</string>
    <string name="change_password_dialog_title">修改中</string>
    <string name="change_password_failed">修改失败</string>
    <string name="change_password_dialog_cancel">取消</string>
    <string name="modify_personal_data_dialog_title">修改中</string>
    <string name="modify_personal_data_dialog_failed">修改失败</string>
    <string name="modify_personal_data_dialog_cancel">取消</string>
    <string name="media_picker_select_from">插入图片:</string>
    <string name="media_picker_camera">相机</string>
    <string name="media_picker_gallery">图库</string>
    <string name="media_picker_ok">确定</string>
    <string name="media_picker_cancel">取消</string>
    <string name="media_picker_some_permission_is_denied">权限不足</string>
    <string name="media_picker_you_need_to_grant_access_to">应用需要获取以下权限：</string>
    <string name="media_picker_read_Write_external_storage"><![CDATA[读写外部存储]]></string>
</resources>
